force-app/main/default/objects/HelloSign__HelloSign_Batch_Queue__c/HelloSign__HelloSign_Batch_Queue__c.object-meta.xml
<CustomObject>
    <description>Custom object to process scheduled jobs in Salesforce</description>
    <label>Dropbox Sign Batch Queue</label>
    <nameField>
        <label>Dropbox Sign Batch Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dropbox Sign Batch Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>