force-app/main/default/objects/HelloSign__HelloSign_Batch_Queue__c/fields/HelloSign__Action__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Action__c</fullName>
    <description>Dropdown field on the Batch Queue record</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>cancel</fullName>
            </value>
            <value>
                <fullName>reminder</fullName>
            </value>
            <value>
                <fullName>template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>