force-app/main/default/objects/HelloSign__HelloSign_Batch_Queue__c/fields/HelloSign__Attempts__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Attempts__c</fullName>
    <description>Number field for the number of attempts for the queue record</description>
    <label>Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>