force-app/main/default/objects/HelloSign__HelloSign_Batch_Queue__c/fields/HelloSign__Error__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to specify if the queue record experienced an error</description>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>