force-app/main/default/objects/HelloSign__HelloSign_Batch_Queue__c/fields/HelloSign__HelloSign_Signature_Request__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__HelloSign_Signature_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>String field of the signature request record for the queue record</description>
    <label>Dropbox Sign Signature Request</label>
    <referenceTo>HelloSign__HelloSign_Signature_Request__c</referenceTo>
    <relationshipLabel>Dropbox Sign Batch Queues</relationshipLabel>
    <relationshipName>HelloSign_Batch_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>