force-app/main/default/objects/HelloSign__HelloSign_Batch_Queue__c/fields/HelloSign__Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Source_Record_Id__c</fullName>
    <description>String field for the source record Id for the queue record</description>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>