force-app/main/default/objects/HelloSign__HelloSign_Batch_Queue__c/fields/HelloSign__Status__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Status__c</fullName>
    <description>Dropdown field on the queue record to display the current status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>batch_ready</fullName>
                <label>Ready</label>
            </value>
            <value>
                <fullName>batch_error</fullName>
                <label>Error</label>
            </value>
            <value>
                <fullName>batch_running</fullName>
                <label>Running</label>
            </value>
            <value>
                <fullName>batch_completed</fullName>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>