force-app/main/default/objects/HelloSign__HelloSign_Batch_Queue__c/fields/HelloSign__Template_Id__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Template_Id__c</fullName>
    <description>String field on the queue record for the Id of the Dropbox Sign template</description>
    <label>Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>