force-app/main/default/objects/HelloSign__HelloSign_Batch_Queue__c/listViews/HelloSign__All.listView-meta.xml
<ListView>
    <fullName>HelloSign__All</fullName>
    <columns>NAME</columns>
    <columns>HelloSign__HelloSign_Signature_Request__c</columns>
    <columns>HelloSign__Action__c</columns>
    <columns>HelloSign__Attempts__c</columns>
    <columns>HelloSign__Status__c</columns>
    <columns>HelloSign__Error__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>